--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,13 +2,16 @@
     .slider
         &_container
             width: 515px
+        &_text
+            padding-left: 88px
 
 @media(max-width: 425px)
     header
-        padding: 32px 0 50px 0
+        padding: 32px 0 0px 0
     .blocks
         &_phone
             margin: 20px auto
+            width: 240px
         &_price
             margin: 0 auto
     .start
@@ -20,9 +23,10 @@
         h2
             margin-top: 18px
             text-align: center
+            font-size: 16px
         &_block
             margin-top: 24px
-            margin: 24px auto
+            margin: 45px auto
             width: 240px
             a
                 font-size: 16px
@@ -30,12 +34,14 @@
         img
             width: 100%
     .slider
-        min-height: 1309px
+        min-height: 1293px
         padding: 0
         padding-bottom: 50px
+        padding-top: 18px
         &_text
             padding: 0
-            padding-top: 25px
+            font-size: 15px
+            margin-top: 20px
         .mobile
             padding-left: 20px
             display: block
@@ -46,8 +52,7 @@
         &_container
             width: 250px
             height: auto
-            margin-top: 25px
-            margin: 0 auto
+            margin: 0px auto
         &_img
             margin-top: 20px
     .team
@@ -55,15 +60,29 @@
         .text
             width: 100px
         &_header
-            margin-top: 25px
+            margin-top: 50px
+            line-height: 38px
         .red
-            margin-top: 0
+            margin-top: 50px
         &_ol
             margin-top: 25px
         &_title
-            font-size: 18px
+            font-size: 17px
         &_name
-            font-size: 16px
+            font-size: 15px
+        .rounded
+            height: 96px
+            width: 96px
+        &_peoples
+            min-height: 0
+            margin-top: 0
+            &_people
+                height: 140px
+        &_ol
+            li
+                font-size: 15px
+                margin-top: 16px
+
     .col-md-6
         .team_peoples
             margin-top: 0
