--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,7 +26,7 @@ header
             font-weight: 600
     &_phone
         font-family: 'Montserrat'
-        width: 240px
+        width: 200px
         height: 40px
         border: 1px solid #062730
         border-radius: 12px
@@ -48,14 +48,13 @@ header
         color: #062730
         font-weight: 400
         font-size: 128px
-        line-height: 128px
         margin-top: 165px
+        line-height: 60px
     h2
         font-family: 'Montserrat'
         font-style: normal
         font-weight: 500
         font-size: 20px
-        line-height: 24px
         color: #062730
         margin-top: 36px
     &_block
@@ -80,7 +79,7 @@ header
     background: #062730
     &_container
         position: relative
-        height: 403px
+        height: 100%
         width: 640px
         transition: 0.6s all
         .hide
@@ -89,19 +88,19 @@ header
             display: block
             height: 100%
     &_img1
-        background: url(../img/pacani1.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_img2
-        background: url(../img/pacani2.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_img3
-        background: url(../img/pacani3.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_img4
-        background: url(../img/pacani4.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_img5
-        background: url(../img/pacani5.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_img6
-        background: url(../img/pacani6.jpeg) center (center/cover) no-repeat
+        background: url(../img/slider.png) center (center/cover) no-repeat
     &_text
-        padding: 125px 0px 125px 88px
+        padding: 125px 0px 125px 60px
         text-align: left
         color: white
         font-family: 'Montserrat'
@@ -137,6 +136,7 @@ header
         min-height: 600px
         &_people
             display: flex
+            align-items: center
             .rounded
                 display: flex
                 justify-content: center
@@ -147,6 +147,7 @@ header
                 background-color: #D9D9D9
                 margin-right: 24px
                 margin-bottom: 32px
+                margin-top: 30px
                 img
                     height: 100%
                     width: 100%
