--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,19 @@
-@media(max-width: 1024px)
+@media(max-width: 1399px)
+    h1
+        font-size: 105px
+        line-height: 80px
+    .slider
+        &_container
+            width: 640px
+        &_text
+            padding-left: 88px
+
+@media(max-width: 1279px)
     .slider
         &_container
             width: 515px
         &_text
             padding-left: 88px
-
 @media(max-width: 425px)
     header
         padding: 32px 0 0px 0
