--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,6 +57,8 @@ h1
         font-size: 20px
         color: #062730
         margin-top: 36px
+    &_link
+        text-decoration: none
     &_block
         margin-top: 48px
         display: flex
@@ -66,7 +68,7 @@ h1
         height: 59px
         background: #C22536
         border-radius: 12px
-        a
+        span
             text-decoration: none
             color: white
             font-family: 'Montserrat'
